figue/tests/integration/snapshots/main__integration__subcommand_errors__nested_subcommand_not_provided_with_builtins.snap
---
source: figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
main repo

Repository operations

USAGE:
    main repo [OPTIONS] <COMMAND>

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    clone
            Clone a repository
    push
            Push changes
    pull
            Pull changes
