figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_positional.snap
---
source: figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
main init

Initialize a new project

USAGE:
    main init [OPTIONS] <NAME>

ARGUMENTS:
        <NAME>
            Project name (creates directory with this name)

OPTIONS:
    -h, --[no-]help
            Show help message and exit.
        --[no-]html-help
            Open HTML help in the browser and exit.
    -V, --[no-]version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -t, --template <STRING>
            Template to use (skips interactive selection)


Error: missing required argument
   ╭─[ <usage>:1:6 ]
   │
 1 │ init <name>
   │      ───┬──  
   │         ╰──── Project name (creates directory with this name)
───╯
